tree-sitter-comp0012/corpus/negative/expression_blocks.txt
==============
Incomplete Expression Blocks
==============

{ 0

---

(source_file
  (block
    (num)
    (MISSING "}")))

==============
Another Incomplete Expression Block
==============

{ 42

---

(source_file
  (block
    (num)
    (MISSING "}")))
